...

    await db.batch((batch) {
      batch.insertAllOnConflictUpdate(db.accounts, [
        AccountsCompanion.insert(
          id: bdo,
          ownerUserId: userId,
          name: 'BDO Savings',
          accountType: 'bank',
          balance: const Value(45000.0),
          currencyCode: const Value('PHP'),
        ),
        AccountsCompanion.insert(
          id: gcash,
...
          normalizedName: 'puregold',
          displayName: const Value('Puregold'),
        ),
        PayeesCompanion.insert(
          id: netflix,
          normalizedName: 'netflix',
          displayName: const Value('Netflix'),
        ),
      ]);

      batch.insertAllOnConflictUpdate(db.transactions, transactions);

      batch.insertAllOnConflictUpdate(db.budgets, [
...
